feat(anvil): support geyser translation layer on bedrock edition